Temporarily disable IOSurface 2D Canvas to debug a trace_test failure.

The first time IOSurface 2D Canvas was enabled, there were no test failures over
several days. The second time it was enabled (along with a bug fix, and some new
tests), trace_test.IOSurface2DCanvas started flakily failing.

BUG=595754

Review URL: https://codereview.chromium.org/1813073002

Cr-Commit-Position: refs/heads/master@{#381843}

Former-commit-id: f4f91cf0abc666aa189c2ee666b7acf0361d00bf